Fix z-index

--- a/src/components/ControlIcon/ControlIcon.scss
+++ b/src/components/ControlIcon/ControlIcon.scss
@@ -13,6 +13,10 @@
     }
   }
 }
+
+.control-icon__icon {
+  z-index: 2;
+}
 .control__icon--button {
   flex: 0 0 auto;
   display: flex;
@@ -25,21 +29,20 @@
 }
 .control__icon--button {
   cursor: pointer;
-  padding: 3px;
   opacity: 0.7;
   position: relative;
 
   &::before {
     content: '';
     position: absolute;
-    height: 100%;
-    width: 100%;
+    height: calc(100% + 6px);
+    width: calc(100% + 6px);
     background: rgba(0, 0, 0, 0.1);
     border-radius: 30px;
     transform: scale(0.3, 0.3);
     opacity: 0;
     transition: all 0.2s cubic-bezier(0.075, 0.82, 0.165, 1);
-    z-index: -1;
+    z-index: 1;
   }
 }
 
